--- a/css/main.css
+++ b/css/main.css
@@ -446,7 +446,7 @@ body {
 }
 @media (max-width: 1200px) {
   .header__stat {
-    font-size: calc(16px + 1 * ((100vw - 320px) / 880));
+    font-size: calc(9.2px + 7.8 * ((100vw - 320px) / 880));
   }
 }
 .header__stat-num {
@@ -462,9 +462,21 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 16px;
+}
+@media (max-width: 1200px) {
+  .header__bottom-link {
+    font-size: calc(10px + 6 * ((100vw - 320px) / 880));
+  }
 }
 .header__bottom-img {
   width: 176px;
+  width: 176px;
+}
+@media (max-width: 1200px) {
+  .header__bottom-img {
+    width: calc(110px + 66 * ((100vw - 320px) / 880));
+  }
 }
 
 /* header end */
@@ -484,12 +496,28 @@ body {
       flex-wrap: wrap;
   margin-right: -18px;
 }
+@media (max-width: 1200px) {
+  .footer__list {
+    margin-right: calc(-10px + -8 * ((100vw - 320px) / 880));
+  }
+}
 .footer__item {
   margin-right: 18px;
   margin-bottom: 2px;
 }
+@media (max-width: 1200px) {
+  .footer__item {
+    margin-right: calc(10px + 8 * ((100vw - 320px) / 880));
+  }
+}
 .footer__link {
   font-size: 12px;
+  font-size: 12px;
+}
+@media (max-width: 1200px) {
+  .footer__link {
+    font-size: calc(9.8px + 2.2 * ((100vw - 320px) / 880));
+  }
 }
 .footer__copyright {
   font-size: 12px;
@@ -613,39 +641,25 @@ body {
   color: #ffda00;
 }
 
-.members__title {
+.title {
   font-size: 20px;
   margin-bottom: 15px;
   font-size: 20px;
 }
 @media (max-width: 1200px) {
-  .members__title {
+  .title {
     font-size: calc(18px + 2 * ((100vw - 320px) / 880));
   }
 }
-.members__link-wrapper {
-  font-size: 14px;
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-@media (max-width: 1200px) {
-  .members__link-wrapper {
-    margin-top: calc(15px + 15 * ((100vw - 320px) / 880));
-  }
-}
-@media (max-width: 1200px) {
-  .members__link-wrapper {
-    margin-bottom: calc(10px + 10 * ((100vw - 320px) / 880));
-  }
-}
-.members__link {
+
+.link {
   color: #ffda00;
   -webkit-transition: 0.15s;
   -o-transition: 0.15s;
   transition: 0.15s;
   position: relative;
 }
-.members__link::before {
+.link::before {
   content: "";
   position: absolute;
   bottom: -2px;
@@ -660,11 +674,27 @@ body {
   -o-transition: 0.15s;
   transition: 0.15s;
 }
-.members__link:hover {
+.link:hover {
   color: #ffae00;
 }
-.members__link:hover::before {
+.link:hover::before {
   width: 100%;
+}
+
+.members__link-wrapper {
+  font-size: 14px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+@media (max-width: 1200px) {
+  .members__link-wrapper {
+    margin-top: calc(15px + 15 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .members__link-wrapper {
+    margin-bottom: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
 }
 .members__text {
   font-size: 14px;
@@ -684,16 +714,6 @@ body {
   max-width: 430px;
 }
 
-.support__title {
-  font-size: 20px;
-  margin-bottom: 15px;
-  font-size: 20px;
-}
-@media (max-width: 1200px) {
-  .support__title {
-    font-size: calc(18px + 2 * ((100vw - 320px) / 880));
-  }
-}
 .support__attention {
   margin: 8px 0;
 }
@@ -725,6 +745,348 @@ body {
 }
 .support__column + .support__column {
   margin-left: 25px;
+}
+
+.about__texts {
+  margin-top: 35px;
+  line-height: 1.35;
+}
+@media (max-width: 1200px) {
+  .about__texts {
+    margin-top: calc(20px + 15 * ((100vw - 320px) / 880));
+  }
+}
+.about__par {
+  font-size: 14px;
+}
+.about__subtitle {
+  font-size: 18px;
+  margin-top: 35px;
+}
+@media (max-width: 1200px) {
+  .about__subtitle {
+    margin-top: calc(20px + 15 * ((100vw - 320px) / 880));
+  }
+}
+
+.contact__text {
+  margin-top: 40px;
+  font-size: 14px;
+}
+@media (max-width: 1200px) {
+  .contact__text {
+    margin-top: calc(15px + 25 * ((100vw - 320px) / 880));
+  }
+}
+
+.customer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
+@media (max-width: 1200px) {
+  .customer__list {
+    margin-bottom: calc(20px + 20 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .customer__list {
+    margin-top: calc(20px + 20 * ((100vw - 320px) / 880));
+  }
+}
+.customer__item {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.2;
+  font-size: 14px;
+}
+@media (max-width: 1200px) {
+  .customer__item {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
+  }
+}
+.customer__item + .customer__item {
+  margin-top: 3px;
+}
+.customer__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.customer__label-text {
+  font-size: 14px;
+  margin-right: 5px;
+  font-size: 14px;
+}
+@media (max-width: 1200px) {
+  .customer__label-text {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
+  }
+}
+.customer__label-input {
+  outline: none;
+  border: 1px solid #999999;
+  color: #9e9e9e;
+  padding: 5px;
+  margin-left: 10px;
+  margin-right: 4px;
+  font-size: 13.3px;
+  font-size: 13.3px;
+  line-height: normal;
+  color: #000;
+  border-radius: 5px;
+  margin-right: 8px;
+}
+@media (max-width: 1200px) {
+  .customer__label-input {
+    font-size: calc(12px + 1.3 * ((100vw - 320px) / 880));
+  }
+}
+.customer__label-input:focus {
+  border-color: #9fcbff;
+  background-color: #dfeeff;
+  background-image: none;
+}
+.customer__label-btn {
+  cursor: pointer;
+  -webkit-transition: 0.15s;
+  -o-transition: 0.15s;
+  transition: 0.15s;
+  background-color: #9fcbff;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px 7px;
+  text-shadow: 1px 1px 1px #5fa8ff;
+  outline: none;
+  border: none;
+  font-size: 13.3px;
+  font-size: 13.3px;
+}
+@media (max-width: 1200px) {
+  .customer__label-btn {
+    font-size: calc(12px + 1.3 * ((100vw - 320px) / 880));
+  }
+}
+.customer__label-btn:hover {
+  background-color: #609feb;
+}
+.customer__label-btn:active {
+  -webkit-transition: 0s;
+  -o-transition: 0s;
+  transition: 0s;
+  -webkit-transform: scale(0.96);
+      -ms-transform: scale(0.96);
+          transform: scale(0.96);
+}
+
+dl,
+dd {
+  margin: 0;
+}
+
+.conditions__title {
+  margin-bottom: 40px;
+  margin-bottom: 40px;
+}
+@media (max-width: 1200px) {
+  .conditions__title {
+    margin-bottom: calc(20px + 20 * ((100vw - 320px) / 880));
+  }
+}
+.conditions__text {
+  font-size: 14px;
+  line-height: 18.9px;
+}
+@media (max-width: 1200px) {
+  .conditions__text {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
+  }
+}
+.conditions__text + .conditions__text {
+  margin-top: 20px;
+}
+@media (max-width: 1200px) {
+  .conditions__text + .conditions__text {
+    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+.conditions__list {
+  margin-top: 20px;
+}
+.conditions__term {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 18.9px;
+  margin-top: 20px;
+}
+@media (max-width: 1200px) {
+  .conditions__term {
+    font-size: calc(13px + 1 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .conditions__term {
+    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+.conditions__definition {
+  font-size: 14px;
+  line-height: 18.9px;
+  margin-top: 20px;
+}
+@media (max-width: 1200px) {
+  .conditions__definition {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .conditions__definition {
+    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+
+.reg__title {
+  font-size: 18px;
+  color: #ffda00;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  max-width: 600px;
+}
+@media (max-width: 1200px) {
+  .reg__title {
+    font-size: calc(14px + 4 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .reg__title {
+    margin-bottom: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .reg__title {
+    padding-bottom: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+.reg__form {
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media (max-width: 1200px) {
+  .reg__form {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
+  }
+}
+.reg__label + .reg__label {
+  margin-top: 10px;
+}
+@media (max-width: 1200px) {
+  .reg__label + .reg__label {
+    margin-top: calc(7px + 3 * ((100vw - 320px) / 880));
+  }
+}
+.reg__label-text {
+  width: 70px;
+  display: inline-block;
+}
+@media (max-width: 1200px) {
+  .reg__label-text {
+    width: calc(60px + 10 * ((100vw - 320px) / 880));
+  }
+}
+.reg__label-input {
+  height: 25px;
+  width: 150px;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #fff;
+  border: none;
+  outline: none;
+  padding: 0 5px;
+  font-size: 13.3px;
+  font-size: 13.3px;
+  margin-left: 10px;
+  border-radius: 3px;
+}
+@media (max-width: 1200px) {
+  .reg__label-input {
+    height: calc(22px + 3 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .reg__label-input {
+    font-size: calc(12px + 1.3 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .reg__label-input {
+    margin-left: calc(7px + 3 * ((100vw - 320px) / 880));
+  }
+}
+.reg__bottom {
+  margin-left: 84px;
+  margin-left: 84px;
+  margin-top: 15px;
+}
+@media (max-width: 1200px) {
+  .reg__bottom {
+    margin-left: calc(70px + 14 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  .reg__bottom {
+    margin-top: calc(10px + 5 * ((100vw - 320px) / 880));
+  }
+}
+.reg__label-check {
+  display: block;
+}
+.reg__link {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+@media (max-width: 1200px) {
+  .reg__link {
+    margin-bottom: calc(10px + 5 * ((100vw - 320px) / 880));
+  }
+}
+.reg__btn {
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  background: #ffda00;
+  display: block;
+  padding: 7px 10px;
+  cursor: pointer;
+  -webkit-transition: 0.15s;
+  -o-transition: 0.15s;
+  transition: 0.15s;
+}
+.reg__btn:hover {
+  background: #ff9100;
+}
+.reg__btn:active {
+  -webkit-transition: 0s;
+  -o-transition: 0s;
+  transition: 0s;
+  -webkit-transform: scale(0.96);
+      -ms-transform: scale(0.96);
+          transform: scale(0.96);
 }
 
 /* main end */
@@ -811,6 +1173,25 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .customer__label {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    gap: 7px;
+  }
+  .customer__label-text {
+    margin-right: 0;
+  }
+  .customer__label-input {
+    margin: 0;
+  }
+  .customer__label-btn {
+    margin: 0;
+  }
 }
 @media (max-width: 610px) {
   .nav__list {
@@ -863,23 +1244,21 @@ body {
   }
   .header__stat > span {
     text-align: center;
-    display: block;
-  }
-  .header__stat > span:nth-child(1) {
-    margin-bottom: 15px;
   }
   .header__stat-num {
-    font-size: 17px;
+    font-size: 11.3px;
     padding: 4px 5px;
   }
   .header__bottom {
-    margin-top: 20px;
+    margin-top: 8px;
   }
   .header__bottom-link {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer__inner {
     padding: 0;
