--- a/css/main.css
+++ b/css/main.css
@@ -558,6 +558,9 @@ body {
     padding-left: calc(14px + 10 * ((100vw - 320px) / 880));
   }
 }
+.main__gallery a::before {
+  display: none;
+}
 .main__gallery-img {
   max-width: 100%;
 }
@@ -573,6 +576,11 @@ body {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 0;
 }
 .main__gallery-banner-wrapper + .main__gallery-banner-wrapper {
   margin-left: 5px;
@@ -645,25 +653,25 @@ body {
   color: #ffda00;
 }
 
-.title {
+h1 {
   font-size: 20px;
   margin-bottom: 15px;
   font-size: 20px;
 }
 @media (max-width: 1200px) {
-  .title {
+  h1 {
     font-size: calc(18px + 2 * ((100vw - 320px) / 880));
   }
 }
 
-.link {
+section a {
   color: #ffda00;
   -webkit-transition: 0.15s;
   -o-transition: 0.15s;
   transition: 0.15s;
   position: relative;
 }
-.link::before {
+section a::before {
   content: "";
   position: absolute;
   bottom: -2px;
@@ -678,27 +686,15 @@ body {
   -o-transition: 0.15s;
   transition: 0.15s;
 }
-.link:hover {
+section a:hover {
   color: #ffae00;
 }
-.link:hover::before {
+section a:hover::before {
   width: 100%;
 }
 
 .members__link-wrapper {
   font-size: 14px;
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-@media (max-width: 1200px) {
-  .members__link-wrapper {
-    margin-top: calc(15px + 15 * ((100vw - 320px) / 880));
-  }
-}
-@media (max-width: 1200px) {
-  .members__link-wrapper {
-    margin-bottom: calc(10px + 10 * ((100vw - 320px) / 880));
-  }
 }
 .members__text {
   font-size: 14px;
@@ -718,17 +714,18 @@ body {
   max-width: 430px;
 }
 
-.support__attention {
-  margin: 8px 0;
-}
-.support__attention strong {
+strong {
   font-weight: bold;
   font-size: 21px;
 }
 @media (max-width: 1200px) {
-  .support__attention strong {
+  strong {
     font-size: calc(16px + 5 * ((100vw - 320px) / 880));
   }
+}
+
+.support__attention {
+  margin: 8px 0;
 }
 .support__text {
   line-height: 1.5;
@@ -750,25 +747,44 @@ body {
 .support__column + .support__column {
   margin-left: 25px;
 }
+.support__column strong {
+  font-size: 14px;
+}
 
-.about__texts {
+.texts p + p {
+  margin-top: 10px;
+}
+.texts a {
+  margin-top: 10px;
+  font-size: 16px;
+}
+@media (max-width: 1200px) {
+  .texts a {
+    font-size: calc(14px + 2 * ((100vw - 320px) / 880));
+  }
+}
+
+p {
+  font-size: 14px;
+}
+
+h2 {
+  font-size: 18px;
+  margin-top: 35px;
+  margin-bottom: 15px;
+}
+@media (max-width: 1200px) {
+  h2 {
+    margin-top: calc(20px + 15 * ((100vw - 320px) / 880));
+  }
+}
+
+.texts {
   margin-top: 35px;
   line-height: 1.35;
 }
 @media (max-width: 1200px) {
-  .about__texts {
-    margin-top: calc(20px + 15 * ((100vw - 320px) / 880));
-  }
-}
-.about__par {
-  font-size: 14px;
-}
-.about__subtitle {
-  font-size: 18px;
-  margin-top: 35px;
-}
-@media (max-width: 1200px) {
-  .about__subtitle {
+  .texts {
     margin-top: calc(20px + 15 * ((100vw - 320px) / 880));
   }
 }
@@ -783,7 +799,7 @@ body {
   }
 }
 
-.customer__list {
+section ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -795,26 +811,30 @@ body {
   margin-top: 40px;
 }
 @media (max-width: 1200px) {
-  .customer__list {
+  section ul {
     margin-bottom: calc(20px + 20 * ((100vw - 320px) / 880));
   }
 }
 @media (max-width: 1200px) {
-  .customer__list {
+  section ul {
     margin-top: calc(20px + 20 * ((100vw - 320px) / 880));
   }
 }
-.customer__item {
+section li {
   font-size: 14px;
   font-weight: bold;
   line-height: 1.2;
   font-size: 14px;
 }
 @media (max-width: 1200px) {
-  .customer__item {
+  section li {
     font-size: calc(12px + 2 * ((100vw - 320px) / 880));
   }
 }
+section li + li {
+  margin-top: 3px;
+}
+
 .customer__item + .customer__item {
   margin-top: 3px;
 }
@@ -835,30 +855,6 @@ body {
   .customer__label-text {
     font-size: calc(12px + 2 * ((100vw - 320px) / 880));
   }
-}
-.customer__label-input {
-  outline: none;
-  border: 1px solid #999999;
-  color: #9e9e9e;
-  padding: 5px;
-  margin-left: 10px;
-  margin-right: 4px;
-  font-size: 13.3px;
-  font-size: 13.3px;
-  line-height: normal;
-  color: #000;
-  border-radius: 5px;
-  margin-right: 8px;
-}
-@media (max-width: 1200px) {
-  .customer__label-input {
-    font-size: calc(12px + 1.3 * ((100vw - 320px) / 880));
-  }
-}
-.customer__label-input:focus {
-  border-color: #9fcbff;
-  background-color: #dfeeff;
-  background-image: none;
 }
 .customer__label-btn {
   cursor: pointer;
@@ -897,6 +893,43 @@ dd {
   margin: 0;
 }
 
+dl {
+  margin-top: 20px;
+}
+
+dd {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 18.9px;
+  margin-top: 20px;
+}
+@media (max-width: 1200px) {
+  dd {
+    font-size: calc(13px + 1 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  dd {
+    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+
+dt {
+  font-size: 14px;
+  line-height: 18.9px;
+  margin-top: 20px;
+}
+@media (max-width: 1200px) {
+  dt {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
+  }
+}
+@media (max-width: 1200px) {
+  dt {
+    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
+  }
+}
+
 .conditions__title {
   margin-bottom: 40px;
   margin-bottom: 40px;
@@ -923,39 +956,59 @@ dd {
     margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
   }
 }
-.conditions__list {
-  margin-top: 20px;
-}
-.conditions__term {
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 18.9px;
-  margin-top: 20px;
+section input {
+  outline: none;
+  border: 1px solid #999999;
+  color: #9e9e9e;
+  padding: 5px;
+  margin-left: 10px;
+  margin-right: 4px;
+  font-size: 13.3px;
+  font-size: 13.3px;
+  line-height: normal;
+  color: #000;
+  border-radius: 5px;
+  margin-right: 8px;
 }
 @media (max-width: 1200px) {
-  .conditions__term {
-    font-size: calc(13px + 1 * ((100vw - 320px) / 880));
+  section input {
+    margin-left: calc(6px + 4 * ((100vw - 320px) / 880));
   }
 }
 @media (max-width: 1200px) {
-  .conditions__term {
-    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
+  section input {
+    font-size: calc(12px + 1.3 * ((100vw - 320px) / 880));
   }
 }
-.conditions__definition {
-  font-size: 14px;
-  line-height: 18.9px;
-  margin-top: 20px;
+section input:focus {
+  border-color: #9fcbff;
+  background-color: #dfeeff;
+  background-image: none;
 }
-@media (max-width: 1200px) {
-  .conditions__definition {
-    font-size: calc(12px + 2 * ((100vw - 320px) / 880));
-  }
+
+.texts-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
-@media (max-width: 1200px) {
-  .conditions__definition {
-    margin-top: calc(10px + 10 * ((100vw - 320px) / 880));
-  }
+
+section button {
+  cursor: pointer;
+  -webkit-transition: 0.15s;
+  -o-transition: 0.15s;
+  transition: 0.15s;
+}
+
+section input[type=checkbox] {
+  margin: 0;
+  margin-right: 5px;
 }
 
 .reg__title {
@@ -1013,34 +1066,6 @@ dd {
     width: calc(60px + 10 * ((100vw - 320px) / 880));
   }
 }
-.reg__label-input {
-  height: 25px;
-  width: 150px;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #fff;
-  border: none;
-  outline: none;
-  padding: 0 5px;
-  font-size: 13.3px;
-  font-size: 13.3px;
-  margin-left: 10px;
-  border-radius: 3px;
-}
-@media (max-width: 1200px) {
-  .reg__label-input {
-    height: calc(22px + 3 * ((100vw - 320px) / 880));
-  }
-}
-@media (max-width: 1200px) {
-  .reg__label-input {
-    font-size: calc(12px + 1.3 * ((100vw - 320px) / 880));
-  }
-}
-@media (max-width: 1200px) {
-  .reg__label-input {
-    margin-left: calc(7px + 3 * ((100vw - 320px) / 880));
-  }
-}
 .reg__bottom {
   margin-left: 84px;
   margin-left: 84px;
@@ -1057,7 +1082,15 @@ dd {
   }
 }
 .reg__label-check {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.reg__label-check-text {
+  line-height: 1;
 }
 .reg__link {
   display: block;
@@ -1093,6 +1126,18 @@ dd {
           transform: scale(0.96);
 }
 
+.title-centered {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+section date {
+  font-size: 14px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
 .media__link {
   display: block;
   padding: 15px 0;
@@ -1115,16 +1160,6 @@ dd {
   .media__name {
     font-size: calc(16px + 4 * ((100vw - 320px) / 880));
   }
-}
-.media__name--centered {
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 15px;
-}
-.media__date {
-  font-size: 14px;
-  margin-bottom: 10px;
-  display: inline-block;
 }
 .media__images {
   margin-top: 20px;
@@ -1212,6 +1247,7 @@ dd {
   padding-left: 0.75em;
   padding-right: 0.5em;
   text-decoration: none;
+  color: #fff;
 }
 @media (max-width: 1200px) {
   .flex__nav-num, .flex__nav-dots, .flex__nav-btn {
@@ -1268,6 +1304,10 @@ dd {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #fff;
+}
+.flex__item-link::before {
+  display: none;
 }
 .flex__item-img {
   margin-bottom: 10px;
@@ -1287,6 +1327,7 @@ dd {
 }
 .flex__item-date {
   font-size: 11px;
+  margin-bottom: 0;
 }
 
 /* main end */
@@ -1355,6 +1396,14 @@ dd {
     margin-left: 0;
   }
 }
+@media (max-width: 995px) {
+  .media__images {
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
+    row-gap: 20px;
+  }
+}
 @media (max-width: 900px) {
   .header__inner {
     padding: 0;
@@ -1415,6 +1464,10 @@ dd {
     display: block;
   }
   .media__date {
+    text-align: center;
+    display: block;
+  }
+  .media date {
     text-align: center;
     display: block;
   }
@@ -1489,6 +1542,17 @@ dd {
   .support__column + .support__column {
     margin-left: 0;
     margin-top: 15px;
+  }
+}
+@media (max-width: 492px) {
+  .media__images-big {
+    grid-template-columns: repeat(auto-fit, 90px);
+    gap: 15px 10px;
+  }
+}
+@media (max-width: 440px) {
+  .media__images {
+    gap: 15px 15px;
   }
 }
 @media (max-width: 420px) {
